Actualizar configuracion a Tailwind 4 y ajustar postcss y app css

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,13 +1,11 @@
-/* @tailwind base; */
-@import url(normalize.css);
+/* resources/css/app.css */
+@import "tailwindcss";
+@import url("normalize.css");
 
-@tailwind components;
-@tailwind utilities;
 
 [x-cloak] {
     display: none;
 }
-
 
 .swal2-container.my-swal {
     z-index: 10000 !important;
