--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,16 +5,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Fredoka:wght@300;400;500;600;700&family=Patrick+Hand&display=swap');
 
 @theme {
-    --font-sans: 'Fredoka', 'Patrick Hand', 'Caveat', cursive, sans-serif;
-}
+    --font-sans: 'Fredoka', 'Open Sans' 'Nunito', 'Patrick Hand', 'Caveat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
 
-@theme {
-    --color-app-primary: #0d9488;
-    --color-app-secondary: #0284c7;
-    --color-app-tertiary: #BFB591;
-    --color-app-accent1: #838386;
-    --color-app-accent2: #404A6E;
-    --color-app-accent3: #B5ACAF;
+    --color-app-primary: #7d2447;
+    --color-app-primary-dark: #6a1f3c;
+    --color-app-secondary: #41504d;
+    --color-app-tertiary: #636569;
+
+    --color-app-surface: #f1f0f0;
+    --color-app-muted: #bfb591;
+
+    --color-app-dark: #0d0d0d;
+
+    --color-app-gradient-1: #8e8b8b;
+    --color-app-gradient-2: #b2b1b1;
+
+    --color-app-accent-1: #6f1728;
+    --color-app-accent-2: #c2ba98;
 }
 
 [x-cloak] {
